Align fixes

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -26,6 +26,7 @@ footer p{
 
 header {
     text-align: center;
+    margin-bottom: 5%;
 }
 
 header h1 {
@@ -86,7 +87,7 @@ img {
 
 img.profilePic {
     max-width: 80%;
-    vertical-align: middle;
+    margin: auto;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
@@ -101,7 +102,8 @@ img.profilePic {
 }
 */
 #social {
-    vertical-align: middle;
+    margin: auto;
+
 }
 
 #quote {
